--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: true
 language: cpp
 compiler:
   - clang
@@ -15,4 +15,4 @@ before_install:
   - sudo apt-get install libpcre3-dev julia -y
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 script:
-  - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.test("OptimPack")'
+  - julia -e 'Pkg.init(); Pkg.add("BinDeps"); Pkg.clone(pwd()); Pkg.build("OptimPack"); Pkg.test("OptimPack")'
